JrAuLouvre/force-app/main/default/objects/public_shift__x/public_shift__x.object-meta.xml
<CustomObject>
    <description>public$shift</description>
    <externalDataSource>herokudb</externalDataSource>
    <externalName>public$shift</externalName>
    <label>public$shift</label>
    <pluralLabel>public$shift</pluralLabel>
</CustomObject>