JrAuLouvre/force-app/main/default/objects/public_shift__x/fields/shiftcurrentconfirmed__c.field-meta.xml
<CustomField>
    <fullName>shiftcurrentconfirmed__c</fullName>
    <description>shiftcurrentconfirmed</description>
    <externalDeveloperName>shiftcurrentconfirmed</externalDeveloperName>
    <label>shiftcurrentconfirmed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>