JrAuLouvre/force-app/main/default/objects/public_shift__x/fields/shiftdate__c.field-meta.xml
<CustomField>
    <fullName>shiftdate__c</fullName>
    <description>shiftdate</description>
    <externalDeveloperName>shiftdate</externalDeveloperName>
    <label>shiftdate</label>
    <type>Date</type>
</CustomField>