JrAuLouvre/force-app/main/default/objects/public_shift__x/fields/shiftnameen__c.field-meta.xml
<CustomField>
    <fullName>shiftnameen__c</fullName>
    <description>shiftnameen</description>
    <externalDeveloperName>shiftnameen</externalDeveloperName>
    <label>shiftnameen</label>
    <length>36</length>
    <type>Text</type>
</CustomField>