JrAuLouvre/force-app/main/default/objects/public_shift__x/fields/shiftnamefr__c.field-meta.xml
<CustomField>
    <fullName>shiftnamefr__c</fullName>
    <description>shiftnamefr</description>
    <externalDeveloperName>shiftnamefr</externalDeveloperName>
    <label>shiftnamefr</label>
    <length>36</length>
    <type>Text</type>
</CustomField>