JrAuLouvre/force-app/main/default/objects/public_shift__x/fields/shifttime__c.field-meta.xml
<CustomField>
    <fullName>shifttime__c</fullName>
    <description>shifttime</description>
    <externalDeveloperName>shifttime</externalDeveloperName>
    <label>shifttime</label>
    <length>16</length>
    <type>Text</type>
</CustomField>