JrAuLouvre/force-app/main/default/objects/public_shift__x/fields/shifttotalseats__c.field-meta.xml
<CustomField>
    <fullName>shifttotalseats__c</fullName>
    <description>shifttotalseats</description>
    <externalDeveloperName>shifttotalseats</externalDeveloperName>
    <label>shifttotalseats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>