JrAuLouvre/force-app/main/default/objects/public_shift__x/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ExternalId</columns>
    <columns>shiftdate__c</columns>
    <columns>shifttime__c</columns>
    <columns>shifttotalseats__c</columns>
    <columns>shiftcurrentconfirmed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>